[package]
name = "genobee"
version = "0.1.0"
authors = ["David <daniel.david.surla@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# User dependencies ::
# Server-side :=
actix-web =  { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
tokio = { version = "1.34.0", features = ["full"] }

# Client-side :=
sdl2 = "0.36.0"
soloud = "1.0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
